# 20250724-fullstack-tutorial

./: .gitignore  README.md  package-lock.json  pyproject.toml  requirements.txt
backend/: db.sqlite3  manage.py  requirements.txt
backend/backend/: settings.py  urls.py
backend/fine_tuning_chatbot/: admin.py  apps.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/fine_tuning_chatbot/migrations/: 0001_initial.py  0002_finetunedmodel_file_id_finetunedmodel_fine_tune_id_and_more.py
backend/myproject/: manage.py
backend/myproject/myapp/: admin.py  serializers.py  tests.py  tests_results.md  urls.py  views.py
backend/myproject/myproject/: settings.py  urls.py
backend/myproject/templates/: hello.html
django-practice/myapp/: urls.py
django-practice/myproject/: settings.py  urls.py
docs/react/concepts/: 01_react_concepts.md  02_setting_react_project.md  03_react_components.md  04_jsx_and_element_rendering.md  05_component_composition_and_reusability.md  06_react_state_management.md  07_event_handling_and_user_interaction.md  08_conditional_rendering_and_lists.md  09_react_development_best_practices.md  10_Summary_and_Integrating_with_the_Next_Chapter.md
docs/react/practice/: 01_create-react-app.md  02_react-state-management.md  03_chatbot-ui-step1-4.md  04_chatbot_step-5.md  (+3 more)
example_project/example_app/: views.py
example_project/example_project/: settings.py  urls.py
frontend/: package-lock.json
frontend/chatbot-app/: package-lock.json  package.json  structure.md
frontend/fine-tuning-chatbot/: package-lock.json  package.json
(+43 files in other folders)
