[project]
name = "20250724-fullstack-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "jjaayy2222",email = "qkfkadmlEkf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref (==3.9.1)",
    "attrs (==25.3.0)",
    "django (==5.2.4)",
    "django-cors-headers (==4.7.0)",
    "djangorestframework (==3.16.0)",
    "drf-spectacular (==0.28.0)",
    "inflection (==0.5.1)",
    "jsonpickle (==4.1.1)",
    "jsonschema (==4.25.0)",
    "jsonschema-specifications (==2025.4.1)",
    "pyyaml (==6.0.2)",
    "referencing (==0.36.2)",
    "rpds-py (==0.26.0)",
    "sqlparse (==0.5.3)",
    "uritemplate (==4.2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
